# expirationTracker

./: '  .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  Untitled Diagram.drawio  endpoints.cpp  endpoints.h  food_item.cpp  food_item.h  fooditem.proto  install.sh  logger.cpp  logger.h  main.cpp  messenger.cpp  messenger.h  network_config.json  pipes.h  start_server.sh  zero.cpp  zero.h
.github/workflows/: format.yml
YOLO/: obj.names  yolov4-tiny.cfg
diagrams/: Untitled Diagram.drawio  communication_diagram.drawio  control_diagram.drawio  display_block_diagram.drawio  gui_class_diagram.drawio  hw_communication_diagram.drawio
display/: CMakeLists.txt
display/diagrams/: display_flowchart.drawio  gui_class_diagram.drawio
display/src/: .display_handler.cpp.swp  button.cpp  button.h  display.cpp  display.h  display_engine.cpp  display_engine.h  display_entry.cpp  display_entry.h  display_global.cpp  display_global.h  display_handler.cpp  display_handler.h  display_messenger.cpp  display_messenger.h  display_pipe.cpp  display_pipe.h  engine_state.cpp  engine_state.h  external_handler.cpp  external_handler.h  game.cpp  game.h  game_global.h  gameplay.cpp  gameplay.h  log_files.cpp  log_files.h  main_menu.cpp  main_menu.h  pause_menu.cpp  pause_menu.h  pipe.cpp  pipe.h  rectangle.h  scanning.cpp  scanning.h  sdl_entry.cpp  sdl_entry.h  sql_food.cpp  (+3 more)
display/src/elements/: bird.h  button.cpp  button.h  composite_element.cpp  composite_element.h  container.cpp  container.h  dropdown.cpp  dropdown.h  element.cpp  element.h  element_mediator.cpp  element_mediator.h  loading_bar.cpp  loading_bar.h  number_setting.cpp  number_setting.h  obstacle.h  obstacle_pair.cpp  obstacle_pair.h  panel.cpp  panel.h  scroll_box.cpp  scroll_box.h  text.cpp  text.h
display/src/elements/flappy_food/: bird.cpp  bird.h  flappy_food.cpp  flappy_food.h  obstacle.cpp  obstacle.h  obstacle_pair.cpp  obstacle_pair.h
display/src/engine/: display_engine.cpp  display_engine.h  display_global.h  engine_entry.cpp  engine_entry.h  engine_state.cpp  engine_state.h  sdl_debug.cpp  sdl_entry.cpp
display/src/engine/elements/: bird.cpp  button.cpp  button.h  button_visitor.cpp  composite_element.cpp  composite_element.h  container.cpp  container.h  dropdown.cpp  dropdown.h  element.cpp  element.h  elementVisitor.h  element_mediator.cpp  element_mediator.h  loading_bar.cpp  loading_bar.h  number_setting.cpp  number_setting.h  obstacle.cpp  obstacle.h  obstacle_pair.cpp  obstacle_pair.h  panel.cpp  panel.h  scroll_box.cpp  scroll_box.h  sort_method.h  text.cpp  text.h
display/src/engine/states/: cancel_scan_confirmation.cpp  item_list.cpp  item_list.h  main_menu.cpp  main_menu.h  pause_menu.cpp  pause_menu.h  scanning.cpp  scanning.h  state.cpp  state.h  zero_weight.cpp  zero_weight.h
display/src/sdl2/: button.cpp  button.h  display.cpp  display.h  display_global.h  element.cpp  element.h  panel.cpp  panel.h  scroll_box.cpp  scroll_box.h  sdl_debug.cpp  sdl_debug.h  sdl_entry.cpp  sdl_entry.h  text.cpp  text.h
display/src/sdl2/elements/: button.cpp  button.h  element.h  number_setting.cpp  number_setting.h  panel.cpp  panel.h  scroll_box.cpp  scroll_box.h  text.cpp  text.h
display/src/sdl2/states/: item_list.cpp  item_list.h  main_menu.cpp  main_menu.h  pause_menu.cpp  pause_menu.h  scanning.cpp  scanning.h  state.cpp  state.h
display/src/states/: cancel_scan_confirmation.cpp  cancel_scan_confirmation.h  item_list.cpp  item_list.h  main_menu.cpp  main_menu.h  pause_menu.cpp  pause_menu.h  scan_failure.cpp  scan_failure.h  scan_success.cpp  scan_success.h  scanning.cpp  scanning.h  state.cpp  state.h  zero_weight.cpp  zero_weight.h
hardware/: README.md  SerialCommunication_Arduino.ino
hardware/controls/: .cameras.cpp.swp  README.md  cameras.cpp  cameras.h  controls.cpp  controls.h  motor.cpp  motor.h
hardware/hiddenSecrets/: HX711Test_Calibration.ino  HX711Test_Measurement.ino  HX711_v2.ino  README.md  cameras.cpp  cameras.h  io.cpp  io.h  motor.cpp  motor.h  wiringPiSerial.cpp
hardware/hiddenSecrets/original/: HX711Test_Calibration.ino
hardware/hiddenSecrets/pyFirmata/: HX711_test.py  SerialCommunication_Arduino.ino  SerialCommunication_RPi.py
hardware/hiddenSecrets/serial/: HX711_v2.ino  serial_test.cpp  wiringPiSerial.cpp
hardware/src/: .hardware_entry.cpp.swp  camera.cpp  camera.h  controls.cpp  controls.h  hardware.cpp  hardware.h  hardware_entry.cpp  hardware_entry.h  hardware_flags.h  hardware_messenger.cpp  hardware_messenger.h  hardware_pipe.cpp  hardware_pipe.h  io.cpp  io.h  network.cpp  network.h
hardware/src/controls/: README.md  cameras.cpp  cameras.h  controls.cpp  controls.h  motor.cpp  weight.cpp  weight.h
images/test/peanut_butter/: out.txt
server/: config.json  easyOCR.py  foodClasses.py  get_local_ip.py  handler.py  load_config.py  server.cpp  server.py  server_messenger.cpp  server_messenger.h  wait_for_pi_discovery.py
vision/: config.json
vision/Models/: .easyOCR.py.swp  .server.py.swp  easyOCR.py  efficientNet.py  foodClasses.py  server.py
vision/include/: IModel.h  ImageProcessor.h  ModelHandler.h  OCRResult.h  ObjectClassifier.h  TextClassifier.h  analyzeImages.h  config.h  externalEndpoints.h  foodItemList.h  handleOBJ.h  handleOCR.h  helperFunctions.h  validateDetection.h  visionMain.h  vision_pipe.h
vision/src/: .ImageProcessor.cpp.swp  FoodClasses.h  IModel.cpp  ImageProcessor.cpp  ModelHandler.cpp  OCRResult.cpp  ObjectClassifier.cpp  TextClassifier.cpp  analyzeImages.cpp  categorizeObjects.cpp  categorizeObjects.h  handleOBJ.cpp  handleOCR.cpp  handleOCR.h  helperFunctions.cpp  pipe.cpp  pipe.h  validateDetection.cpp  visionMain.cpp  vision_pipe.cpp  vision_pipe.h
yoloDarknet/include/: darknet.h  yolo_v2_class.hpp
